<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentTime"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TimeFragment">

    <EditText
        android:id="@+id/etNomeTime"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="70dp"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="@+id/etCidadeTime"
        app:layout_constraintEnd_toEndOf="@+id/etCidadeTime"
        app:layout_constraintStart_toStartOf="@+id/etCodigoTime"
        app:layout_constraintTop_toTopOf="@+id/etCodigoTime" />

    <EditText
        android:id="@+id/etCidadeTime"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="143dp"
        android:ems="10"
        android:hint="@string/cidade"
        android:inputType="text"
        android:importantForAutofill="no"
        app:layout_constraintBottom_toBottomOf="@+id/btnExcluirTime"
        app:layout_constraintEnd_toEndOf="@+id/btnBuscarTime"
        app:layout_constraintStart_toStartOf="@+id/etCodigoTime"
        app:layout_constraintTop_toTopOf="@+id/etCodigoTime" />

    <EditText
        android:id="@+id/etCodigoTime"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="119dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:hint="@string/codigo"
        android:inputType="number"
        android:importantForAutofill="no"
        app:layout_constraintEnd_toStartOf="@+id/btnBuscarTime"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnBuscarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="51dp"
        android:layout_marginBottom="31dp"
        android:text="@string/Buscar"
        app:layout_constraintBottom_toTopOf="@+id/etNomeTime"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/etCodigoTime" />

    <Button
        android:id="@+id/btnInserirTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="17dp"
        android:text="@string/inserir"
        app:layout_constraintBottom_toTopOf="@+id/btnExcluirTime"
        app:layout_constraintEnd_toEndOf="@+id/btnExcluirTime" />

    <Button
        android:id="@+id/btnEditarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="19dp"
        android:text="@string/Editar"
        app:layout_constraintBottom_toTopOf="@+id/btnListarTime"
        app:layout_constraintEnd_toEndOf="@+id/btnListarTime" />

    <Button
        android:id="@+id/btnExcluirTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="39dp"
        android:layout_marginBottom="184dp"
        android:text="@string/Excluir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnListarTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="65dp"
        android:text="@string/Listar"
        app:layout_constraintEnd_toEndOf="@+id/tvListaTime"
        app:layout_constraintTop_toTopOf="@+id/btnExcluirTime" />

    <TextView
        android:id="@+id/tvListaTime"
        android:layout_width="321dp"
        android:layout_height="0dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="23dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnListarTime" />
</androidx.constraintlayout.widget.ConstraintLayout>